# treeCoreset

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh  main.cpp  mex_test.cpp  pyproject.toml  setup.py
.github/workflows/: build_and_tests.yml  build_wheels.yml  helloAction.yml  publish_wheels.yml
src/: AssessMotionFullArgs.m  AssessMotion_elvi.m  ClusteredPoints.cpp  ClusteredPoints.h  Errors.h  NetworkProtocol.cpp  Node.cpp  Node.h  Point.cpp  Point.h  Requests.h  State.cpp  State.h  Untitled.ipynb  coreset_algorithms.cpp  coreset_algorithms.h  demo.m  demo.m~  doKmeans.cpp  getKclusters.cpp  getRepresentatives.cpp  kmeans_coreset.py  kmeansplusplus.cpp  kmeansplusplus.h  mex_test.cpp  sillyTest.cpp
src/clustering/: ClusteredPoints.cpp  ClusteredPoints.h  Node.cpp  Node.h  Point.cpp  Point.h  RandomGenerator.cpp  RandomGenerator.h  coreset_algorithms.cpp  coreset_algorithms.h  kmeansplusplus.cpp  kmeansplusplus.h
src/network/: ClientMessaging.cpp  ClientMessaging.h  Messaging.cpp  Messaging.h  MessagingUtils.cpp  MessagingUtils.h  NetworkProtocol.cpp  NetworkProtocol.h  Requests.h  ServerMessaging.cpp  ServerMessaging.h  getKclusters.cpp  getRepresentatives.cpp  sendPoint.cpp  stopServer.cpp
src/nilearn_cache/joblib/nilearn/input_data/base_masker/filter_and_extract/670b00071fb9d543bf8ff47ed3a1922b/: metadata.json  output.pkl
src/nilearn_cache/joblib/nilearn/input_data/base_masker/filter_and_extract/6967bd7233e0487de3fdce63e5bf2e68/: metadata.json  output.pkl
src/nilearn_cache/joblib/nilearn/input_data/base_masker/filter_and_extract/a7b9c40f00af6e0de51c4eea880ed8a3/: metadata.json  output.pkl
src/nilearn_cache/joblib/nilearn/input_data/base_masker/filter_and_extract/cd1df7b2d1a3722bb1d1ff058e38c4dd/: metadata.json  output.pkl
test/: clustered_points_test.cpp  coreset_algorithms_test.cpp  kmeansplusplus_test.cpp  main_test.cpp  math_framework.cpp  mock_RandomGenerator.h  node_test.cpp  point_test.cpp  utils.cpp  utils.h
test/clustering/: clustered_points_test.cpp  coreset_algorithms_test.cpp  exampledata.csv  expectedLabels.csv  kmeansplusplus_test.cpp  math_framework.h  node_test.cpp  point_test.cpp  utils.cpp
test/mocks/: mock_RandomGenerator.cpp  mock_RandomGenerator.h
test/network/: client_messaging_test.cpp  server_messaging_test.cpp
treeCoreset/: __init__.py
