[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "scikit-build>=0.13.0",
    "cmake>=3.18",
    "ninja",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build-verbosity = 1

[project]
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = [
    "numpy"
]

authors = [
    {name = "Fabrice Guibert", email = "fabrice.guibert@epfl.ch"}
]
maintainers = [
    {name = "Fabrice Guibert", email = "fabrice.guibert@epfl.ch"}
]

description = "C++ and Python implementation of coreset for k-means"
readme = "README.md"
license = "GNU GENERAL PUBLIC LICENSE"