[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "scikit-build>=0.13.0",
    "cmake>=3.18",
    "ninja",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build-verbosity = 1

[project]
dynamic = ["version"]

description = "C++ and Python implementation of coreset for k-means"
readme = "README.md"
license = "GNU GENERAL PUBLIC LICENSE"