[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "scikit-build>=0.13.0",
    "cmake>=3.18",
    "ninja",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build-verbosity = 1


[project]
name = "treeCoreset"
version = "0.1.2"
description = "C++ tree-based coreset library with Python bindings"
readme = "README.md"
authors = [
    {name = "Fabrice Guibert", email = "fabrice.guibert@epfl.ch"}
]
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/Shrecki/treeCoreset"
Repository = "https://github.com/Shrecki/treeCoreset.git"